--- a/vercel.json
+++ b/vercel.json
@@ -11,11 +11,7 @@
     ],
     "routes": [
       {
-        "src": "/api/products",
-        "dest": "index.js"
-      },
-      {
-        "src": "/api/products/(.*)",
+        "src": "/api/products(/.*)?",
         "dest": "index.js"
       },
       {
