--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,11 @@
     ],
     "routes": [
       {
-        "src": "/api/products(/.*)?",
+        "src": "/api/products/**",
+        "dest": "index.js"
+      },
+      {
+        "src": "/api/products/(/*)",
         "dest": "index.js"
       },
       {
