--- a/vercel.json
+++ b/vercel.json
@@ -11,12 +11,16 @@
     ],
     "routes": [
       {
-        "src": "/api/products/**",
+        "src": "/api/products",
         "dest": "index.js"
       },
       {
-        "src": "/api/products/(/*)",
+        "src": "/api/products/(.*)",
         "dest": "index.js"
+      },
+      {
+        "src": "/add",
+        "dest": "dist/index.html"
       },
       {
         "src": "/",
